@@ -1,4 +1,1 @@
- * Checks the certificate chain integrity
- * Does not accept certificates without SANs (use ```--allow-empty-san``` to ignore)
- * Bug fix in the handling of errors while fetching certificates
- * Allows a check on invalid FQDNs containing an underscore
+Fixed the local certificate chain check
